# audio-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
configs/: base.yaml  development.yaml  production.yaml  queue.yaml
docs/: COMPARISON.md  FULL_TECHNICAL_DEMO.md  INTERVIEW_GUIDE.md  SALES_TECHNICAL_GUIDE.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AudioUpload.jsx  Layout.jsx  ResultsList.jsx  SearchBar.jsx  StreamingMic.jsx
frontend/src/pages/: Home.jsx  Search.jsx  Streaming.jsx  Upload.jsx
k8s/: README.md
k8s/helm/audio-rag/: Chart.yaml  values.yaml
k8s/helm/audio-rag/templates/: NOTES.txt  api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  ollama.yaml  pvc.yaml  qdrant.yaml  redis.yaml  secrets.yaml  worker-deployment.yaml
scripts/: demo_start.sh  demo_stop.sh  run.py  test_streaming.py
src/audio_rag/: __init__.py
src/audio_rag/alignment/: __init__.py  aligner.py
src/audio_rag/api/: __init__.py  app.py  config.py  deps.py  health.py  middleware.py  schemas.py
src/audio_rag/api/v1/: collections.py  ingest.py  jobs.py  query.py  router.py  streaming.py
src/audio_rag/asr/: __init__.py  base.py  streaming.py  whisper.py
src/audio_rag/chunking/: __init__.py  base.py  fixed.py  speaker_turn.py
src/audio_rag/config/: __init__.py  loader.py  schema.py
src/audio_rag/contextual/: __init__.py  processor.py
src/audio_rag/core/: __init__.py  base.py  exceptions.py  registry.py
src/audio_rag/core/resilience/: __init__.py  circuit_breaker.py  fallback.py  (+2 more)
src/audio_rag/diarization/: __init__.py  base.py  nemo.py  pyannote.py
src/audio_rag/embeddings/: __init__.py  base.py  bge.py
src/audio_rag/evaluation/: __init__.py  dataset.py  metrics.py
src/audio_rag/expansion/: __init__.py  hyde.py
src/audio_rag/generation/: __init__.py  base.py  ollama.py  prompts.py
src/audio_rag/pipeline/: __init__.py  ingestion.py  orchestrator.py  query.py
src/audio_rag/queue/: __init__.py  config.py  connection.py  exceptions.py  job.py  queue.py  validation.py  worker.py
src/audio_rag/reranking/: __init__.py  base.py  bge.py
src/audio_rag/resources/: __init__.py  manager.py
src/audio_rag/retrieval/: __init__.py  base.py  qdrant.py
src/audio_rag/tts/: __init__.py  base.py  edge.py  piper.py
src/audio_rag/utils/: __init__.py  decorators.py  logging.py
tests/: conftest.py
tests/integration/: test_health.py  test_ingest.py  test_jobs.py
tests/unit/api/: test_schemas.py
tests/unit/core/: test_circuit_breaker.py  test_fallback.py  test_retry.py  test_timeout.py
tests/unit/queue/: test_config.py  test_job.py  test_validation.py
